--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "starship-api-python"
-version = "0.1.0"
+version = "0.2.0"
 description = "An API to manage starships and pilots for the Galactic Empire."
 authors = ["Edward <eafanadoracevedo@gmail.com>"]
-
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -11,11 +11,16 @@ fastapi = "^0.103.0"
 httpx = "^0.25.0"
 uvicorn = "^0.23.0"
 pydantic = "^2.0.0"
-pytest = "^7.4.0"
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
+respx = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core>=1.1.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+
