--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ pydantic = "^2.0.0"
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 respx = "^0.22.0"
+flake8 = "^7.1.1"
+black = "^24.10.0"
+isort = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.1.0"]
