--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ respx = "^0.22.0"
 flake8 = "^7.1.1"
 black = "^24.10.0"
 isort = "^6.0.0"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.1.0"]
